# airis-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELETION_RATIONALE.md  FASTMCP_ANALYSIS.md  FASTMCP_QUICK_REFERENCE.md  LICENSE  MANIFEST.in  Makefile  PLUGIN_INSTALL.md  PROJECT_INDEX.json  PROJECT_INDEX.md  PR_DOCUMENTATION.md  README.md  SECURITY.md  TEST_PLUGIN.md  package.json  pyproject.toml  setup.py  workspace.yaml
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/: FUNDING.yml
.github/workflows/: ci-next.yml  deploy-plugin.yml  publish-pypi.yml  readme-quality-check.yml
docs/: OPENMCP_ANALYSIS.md  PR_STRATEGY.md  README.md  airis-cli-plan.md  mcp-api-plan.md  next-refactor-plan.md  plugin-reorg.md
docs/agents/: pm-agent-guide.md
docs/architecture/: CONTEXT_WINDOW_ANALYSIS.md  MIGRATION_TO_CLEAN_ARCHITECTURE.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PM_AGENT_COMPARISON.md  SKILLS_CLEANUP.md  deletion-rationale.md  parallel-indexing-plan.md  pm-agent-auto-activation.md
docs/developer-guide/: README.md  contributing-code.md  documentation-index.md  pr-documentation.md  technical-architecture.md  testing-debugging.md  testing-plugin.md
docs/getting-started/: installation.md  quick-start.md
docs/mcp/: mcp-integration-policy.md  mcp-optional-design.md
docs/memory/: WORKFLOW_METRICS_SCHEMA.md  last_session.md  next_actions.md  pm_context.md  token_efficiency_validation.md
docs/reference/: README.md  advanced-patterns.md  advanced-workflows.md  basic-examples.md  claude-code-history-management.md  common-issues.md  diagnostic-reference.md  examples-cookbook.md  integration-patterns.md  mcp-server-guide.md  pm-agent-autonomous-reflection.md  suggested-commands.md  troubleshooting.md
docs/research/: complete-python-skills-migration.md  fastmcp-analysis.md  fastmcp-quick-reference.md  intelligent-execution-architecture.md  llm-agent-token-efficiency-2025.md  markdown-to-python-migration-plan.md  mcp-installer-fix-summary.md  parallel-execution-complete-findings.md  parallel-execution-findings.md  phase1-implementation-strategy.md  pm-skills-migration-results.md  pm_agent_roi_analysis_2025-10-21.md  python_src_layout_research_20251021.md  quality-comparison.md  repository-understanding-proposal.md  research_installer_improvements_20251017.md  research_oss_fork_workflow_2025.md  research_python_directory_naming_20251015.md  research_python_directory_naming_automation_2025.md  research_repository_scoped_memory_2025-10-16.md  research_serena_mcp_2025-01-16.md  skills-migration-test.md  task-tool-parallel-execution-results.md
docs/sessions/: 2025-10-14-summary.md
docs/testing/: procedures.md
docs/troubleshooting/: serena-installation.md
docs/user-guide/: agents.md  commands.md  flags.md  mcp-servers.md  modes.md  session-management.md
docs/user-guide-jp/: agents.md  commands.md  flags.md  mcp-servers.md  modes.md  session-management.md
docs/user-guide-kr/: agents.md  commands.md  flags.md  mcp-servers.md  modes.md  session-management.md
docs/user-guide-zh/: agents.md  commands.md  flags.md  mcp-servers.md  modes.md  session-management.md
plugins/airis-agent/agents/: repo-index.md
plugins/airis-agent/commands/: agent.md  index-repo.md
plugins/airis-agent/manifest/: marketplace.template.json  metadata.json  plugin.template.json
plugins/superagent/agents/: deep-research.md  repo-index.md  self-review.md
plugins/superagent/commands/: agent.md  index-repo.md
plugins/superagent/scripts/: session-init.sh
scripts/: README.md  build_airis_agent_plugin.py  build_superagent_plugin.py  cleanup.sh  publish.sh  session-init.sh
src/airis_agent/: __init__.py  __version__.py  mcp_server.py  pytest_plugin.py
src/airis_agent/api/: confidence.py
src/airis_agent/cli/: __init__.py  main.py  (+4 more)
src/superagent/: __init__.py  pytest_plugin.py
tests/: conftest.py  test_pytest_plugin.py
tests/api/: test_confidence_api.py  test_repo_index_api.py  test_research_api.py
tests/pm_agent/: README.md  __init__.py  conftest.py  test_confidence_check.py  test_reflexion_pattern.py  test_self_check_protocol.py
(+9 files in other folders)
